[package]
name = "buzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
base64 = "0.13.0"

[[bin]]
name = "buzz-server"
path = "src/server.rs"
