[package]
name = "buzz"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["wasm", "webassembly-line"]

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
axum = "0.4.7"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
tokio-util = { version = "0.7.1", features = ["io"] }
